# Prosperity-3

./: backtester.sh  backtester_output.txt  cmma_grid_search.py  cmma_quick_search_results.csv  cmma_test_search_results.csv  daily_price_analysis.ipynb  daily_price_analysis_updated.ipynb  datamodel.py  fixed_grid_search.py  full_grid_search.py  pb2_grid_search_results.csv  price_adjustment_pivot_results.csv  price_adjustment_test_results.csv  prosperity12_daily_vwap.csv  prosperity3_daily_price_analysis.ipynb  prosperity3_timestamp_vwap.csv  prosperity_daily_vwap.csv  pyproject.toml  run_cmma_grid_search.bat  run_cmma_quick_search.bat  run_full_grid_search.bat  trader.py
.ipynb_checkpoints/: daily_price_analysis-checkpoint.ipynb
Testing/: test_backtester.py  util.py
Testing/Data/: r0_dTEST.csv
Testing/Round 0/: eda.ipynb  kelp_trader.py  kelp_true_fair_analysis.ipynb  predicting_kelp_returns.ipynb
Testing/Round 1/: README.md  eda.ipynb  squid_kelp_vwap.csv
Testing/Round 2/: README.md
Testing/Round 4/: eda.ipynb
Testing/backtester/: __init__.py  utils.py
algos_lopo/: KELP.py  RAINFOREST_RESIN.py  yes_edging_no_hedging.py
algos_lopo/.ipynb_checkpoints/: RAINFOREST_RESIN-checkpoint.ipynb
backtester/: .gitignore  app.py  backtester2.py  combine.ipynb  constants.py  datamodel.py  grid_search_custom_spread.py  jsontocsv.ipynb  main.py  saved_code.py  util.py
backtester/cache/: r0_d0
backtester2/: backtester.py  backtester2.py  bot_behavior.py  constants.py  util.py
bt/: constants.py  correct.py  test.ipynb
round-2-island-data-bottle/: 500_output.txt
(+150 files in other folders)
