[project]
name = "prosperity-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jsonpickle>=4.0.5",
    "pandas>=2.2.3",
    "statistics>=1.0.3.5",
]

[dependency-groups]
dev = [
    "plotly>=6.0.1",
    "matplotlib>=3.10.1",
    "jupyter>=1.1.1",
    "streamlit>=1.44.0",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
    "streamlit-monaco>=0.1.3",
]
